force-app/main/default/objects/Retail_Order_Item__c/Retail_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Retail Order Item</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>Retail Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>