force-app/main/default/objects/Retail_Order_Item__c/fields/Retail_Order__c.field-meta.xml
<CustomField>
    <fullName>Retail_Order__c</fullName>
    <label>Retail Order</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Order Items</relationshipLabel>
    <relationshipName>Retail_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>