force-app/main/default/objects/Retail_Order_Item__c/fields/Retail_Product__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retail Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Order Items</relationshipLabel>
    <relationshipName>Retail_Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>