force-app/main/default/objects/Retail_Order_Item__c/validationRules/No_Negative_Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorMessage>Unit price cannot be negative.</errorMessage>
</ValidationRule>