force-app/main/default/objects/Retail_Order_Item__c/validationRules/No_Zero_Or_Negative_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Zero_Or_Negative_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>