force-app/main/default/objects/Retail_Order_Item__c/validationRules/Prevent_Edit_When_Order_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_When_Order_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(Retail_Order__r.Status__c, &quot;Completed&quot;)
)</errorConditionFormula>
    <errorMessage>Cannot modify items when order is completed.</errorMessage>
</ValidationRule>